fix css spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -280,12 +280,12 @@ a {
   border-radius: 20px;
   display: none;
   color: black;
-  width:      100%;
-  height:     100%; 
-  z-index:    10;
-  top:        0; 
-  left:       0; 
-  position:   fixed;
+  width: 100%;
+  height: 100%; 
+  z-index: 10;
+  top: 0; 
+  left: 0; 
+  position: fixed;
   background-image: url("../images/beer-background.jpg");
   background-size: cover;
   background-attachment: fixed;
@@ -310,10 +310,10 @@ a {
   color: white;
   opacity:    0.8; 
   background-image: linear-gradient(to top, #9be15d 0%, #00e3ae 100%);  width:      100%;
-  height:     100%; 
-  z-index:    10;
-  top:        0; 
-  left:       0; 
+  height: 100%; 
+  z-index: 10;
+  top: 0; 
+  left: 0; 
   position:   fixed;
 } 
 
@@ -324,12 +324,13 @@ a {
   display: none;
   color: white;
   opacity:    0.8; 
-  background-image: linear-gradient(to top, #9be15d 0%, #00e3ae 100%);  width:      100%;
-  height:     100%; 
-  z-index:    10;
-  top:        0; 
-  left:       0; 
-  position:   fixed;
+  background-image: linear-gradient(to top, #9be15d 0%, #00e3ae 100%); 
+  width: 100%;
+  height: 100%; 
+  z-index: 10;
+  top: 0; 
+  left: 0; 
+  position: fixed;
 }
 
 .gameover-page{
@@ -338,11 +339,11 @@ a {
 }
 
 #timer-page{
-  width:      100%;
-  height:     100%; 
-  z-index:    10;
-  top:        0; 
-  left:       0; 
+  width: 100%;
+  height: 100%; 
+  z-index: 10;
+  top: 0; 
+  left: 0; 
   position:   fixed;
   background-image: url("../images/beer-background.jpg");
   background-size: cover;
